[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/components/player/weapon/gun/shot/PlayerShot.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/common/bullet/CommonBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/components/common/timer/CommonTimer.tscn" type="PackedScene" id=3]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.687117, 0.996933, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.480682 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 60.0
flatness = 0.5
gravity = Vector3( 100, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
scale = 3.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[node name="PlayerShot" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
_common_bullet_scene = ExtResource( 2 )

[node name="BulletDirection" type="Position2D" parent="."]
position = Vector2( 24, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fired" type="Particles2D" parent="."]
position = Vector2( 8, 0 )
emitting = false
amount = 10
lifetime = 0.1
one_shot = true
explosiveness = 1.0
process_material = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CommonTimer" parent="." instance=ExtResource( 3 )]
visible = false
_is_hidden = true

[connection signal="timeout" from="CommonTimer" to="." method="_on_CommonTimer_timeout"]
